ingress-example-2-applications/ingress-tls-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - a89fbf8eafe914981b651b710ab2dd71-06dfbf7c3508b164.elb.ap-south-1.amazonaws.com
      secretName: my-tls-secret
  rules:
    - host: a89fbf8eafe914981b651b710ab2dd71-06dfbf7c3508b164.elb.ap-south-1.amazonaws.com
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
